Corrected height on hero image and adjusted navbar to fixed.  Need to look at image size as it takes too long to load.

--- a/styles/Creator.css
+++ b/styles/Creator.css
@@ -26,8 +26,8 @@ body {
 /* Hero section */
 
 .hero-section {
-    background-image: url("../images//nightsky.jpg");
-    height: 105vh;
+    background-image: url("../images/nightsky.jpg");
+    height: 90vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -48,12 +48,12 @@ body {
 
 .jumbotron {
     position: relative;
-    top: -65px;
+    /* top: -65px; */
 }
 
 .navbar-brand,
 .nav-link {
-    color: #fff !important;
+    color: #fff !important;    
 }
 
 .quote-text {
